# paddle-billing-client

./: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt  website-stalker.yaml
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  greetings.yml  publish.yml  release-drafter.yml  website-stalker.yml
com/paddle/developer/: api-reference-notifications-overview.txt  api-reference-transactions-overview.txt
docker/: README.md
paddle_billing_client/: __init__.py  client.py  endpoints.py  errors.py  formatters.py  helpers.py  pagination.py  utils.py
paddle_billing_client/models/: __init__.py  address.py  adjustment.py  base.py  business.py  common.py  customer.py  discount.py  event.py  notification.py  notification_setting.py  price.py  product.py  subscription.py  transaction.py
sites/: com-paddle-developer-api-reference-addresses-overview.txt  com-paddle-developer-api-reference-adjustments-overview.txt  com-paddle-developer-api-reference-businesses-overview.txt  com-paddle-developer-api-reference-events-overview.txt  com-paddle-developer-api-reference-notification-settings-overview.txt  com-paddle-developer-api-reference-prices-overview.txt  com-paddle-developer-api-reference-products-overview.txt  com-paddle-developer-api-reference-subscriptions-overview.txt  com-paddle-developer-api-reference-transactions-overview.txt  website-stalker.yaml
tests/: checkout_sample.html  checkout_subscription_sample.html  conftest.py  test_address.py  test_adjustment.py  test_business.py  test_customer.py  test_discount.py  test_event_type.py  test_events.py  test_notification.py  test_notification_setting.py  test_preview_prices.py  test_price.py  test_product.py  test_subscription.py  test_transaction.py  test_unittests.py
tests/cassettes/test_address/: TestAddress.test_create_address_for_customer.yaml  TestAddress.test_get_address_for_customer.yaml  TestAddress.test_list_addresses_for_customer.yaml  TestAddress.test_update_address_for_customer.yaml
tests/cassettes/test_adjustment/: TestAdjustment.test_create_adjustment.yaml  TestAdjustment.test_list_adjustments.yaml  TestAdjustment.test_list_adjustments_approved.yaml  TestAdjustment.test_list_adjustments_pending.yaml
tests/cassettes/test_business/: TestBusiness.test_create_business_for_customer.yaml  TestBusiness.test_get_business_for_customer.yaml  TestBusiness.test_list_businesses_for_customer.yaml  TestBusiness.test_update_business_for_customer.yaml
tests/cassettes/test_customer/: TestCustomer.test_create_customer.yaml  TestCustomer.test_get_customer.yaml  TestCustomer.test_list_customers.yaml  TestCustomer.test_update_customer.yaml
tests/cassettes/test_discount/: TestDiscount.test_create_discount.yaml  TestDiscount.test_get_discount.yaml  TestDiscount.test_list_discounts.yaml  TestDiscount.test_update_discount.yaml
tests/cassettes/test_event_type/: TestEventType.test_list_event_types.yaml
tests/cassettes/test_events/: TestEvents.test_list_events.yaml
tests/cassettes/test_notification/: TestNotification.test_get_notification.yaml  TestNotification.test_list_notifications.yaml  TestNotification.test_replay_notification.yaml
tests/cassettes/test_notification_setting/: TestNotificationSetting.test_create_notification_setting.yaml  TestNotificationSetting.test_delete_notification_setting.yaml  TestNotificationSetting.test_get_notification_setting.yaml  TestNotificationSetting.test_list_notification_settings.yaml  TestNotificationSetting.test_update_notification_setting.yaml
tests/cassettes/test_preview_prices/: TestPreviewPrices.test_preview_prices_address.yaml  TestPreviewPrices.test_preview_prices_customer_id_with_address_id.yaml  TestPreviewPrices.test_preview_prices_customer_id_with_business_id.yaml  (+1 more)
tests/test_example/: test_hello.py
(+39 files in other folders)
