# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "paddle-billing-client"
version = "0.0.0"
description = "Python wrapper around the new Paddle Billing API"
readme = "README.md"
authors = ["Benjamin Gervan <bgervan@webstormit.com>"]
license = "MIT"
repository = "https://github.com/websideproject/paddle-billing-client"
homepage = "https://github.com/websideproject/paddle-billing-client"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]



[tool.poetry.dependencies]
python = "^3.8.4"
importlib_metadata = {version = "^4.5.0", python = "<3.8"}
api-client-pydantic = "^3.0.0"
pydantic = ">=2.0,<=2.9.2"
[tool.poetry.dev-dependencies]
bandit = "^1.7.9"
black = {version = "^24.4.2", allow-prereleases = true}
darglint = "^1.8.1"
isort = {extras = ["colors"], version = "^5.13.2"}
mypy = "^1.11.2"
mypy-extensions = "^1.0.0"
pre-commit = "^3.5.0"
pydocstyle = "^6.1.1"
pylint = "^3.2.7"
pytest = "^8.3.3"
pyupgrade = "^3.16.0"
safety = "^3.2.14"
coverage = "^7.6.1"
coverage-badge = "^1.1.1"
pytest-html = "^4.1.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.2,<9.0.0"
vcrpy = ">=5.1,<7.0"
pytest-recording = "^0.13.0"
deepdiff = ">=6.3.1,<8.0.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 37
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.8
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
[coverage.paths]
source = "paddle-billing-client"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
